# Aegis

./: .cursorrules  .env.example  .gitignore  CONTRIBUTING.md  LICENSE  Makefile  README.md  SECURITY.md  docker-compose.yml  policy.json.example  push-to-github.ps1  run-verifier.ps1
.github/workflows/: test.yml
agent/: aegis_sdk.py  agent.py  config.json  requirements.txt
core/proxy/: Cargo.toml  Dockerfile
core/verifier/: Dockerfile
crypto/: Cargo.toml
dashboard/: Dockerfile  README.md  tailwind.config.ts
dashboard/src/: middleware.ts
deploy/: .env.example  README.md  otel-collector-config.yaml  otel-collector.env.example  prometheus-demo.yaml
docs/: ARCHITECTURE.md  CISO_HANDOFF.md  OPEN_CORE.md  README.md  SECURITY_AUDIT.md  proxy_mitm_ca_trust.md
docs/demo/: ciso-demo-script.md  getting-started.md  policy-quickstart.md
docs/runbooks/: 02-proxy-unhealthy.md
docs/security/: trust-model.md
docs/web/: design_standards.md  (+1 more)
examples/: bring_your_own_agent.py  requirements.txt  stress_test_agent.py  swarm_demo.py  websocket_agent_demo.py
policies/: default.rego  payload.rego  response.rego
proxy/: Cargo.toml  README.md
proxy/src/: certs.rs  intercept.rs  main.rs  payload_policy.rs  schema_validator.rs  telemetry.rs  trace_log.rs
schemas/: registry.json.example
scripts/: demo.ps1  demo.sh  test-all.ps1
sentinel/: Cargo.toml  README.md
verifier/: Cargo.toml
verifier/src/: engine.rs  keys.rs  main.rs  policy.rs  schema.rs  store.rs
web/: .env.local.example  next.config.js  package-lock.json  package.json  tsconfig.tsbuildinfo
(+117 files in other folders)
