[package]
name = "aegis-proxy"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1"
blake3 = "1"
bytes = "1"
chrono = { version = "0.4", features = ["serde"] }
dashmap = "6"
http = "1"
http-body-util = "0.1"
hyper = { version = "1", features = ["full"] }
hyper-util = { version = "0.1", features = ["tokio"] }
rcgen = { version = "0.14", features = ["x509-parser"] }
regorus = "0.4"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "stream"] }
rustls = "0.23"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
futures-util = "0.3"
tokio = { version = "1", features = ["full"] }
tokio-rustls = "0.26"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt", "json"] }
