[package]
name = "aegis-api"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1"
axum = "0.8"
blake3 = "1"
chrono = { version = "0.4", features = ["serde"] }
dashmap = "6"
ed25519-dalek = { version = "2", features = ["rand_core"] }
rand = "0.8"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "signal", "net"] }
tower-http = { version = "0.6", features = ["cors", "trace"] }
